--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\201703221537246_Password.Designer.cs">
       <DependentUpon>201703221537246_Password.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703221908504_City.cs" />
+    <Compile Include="Migrations\201703221908504_City.Designer.cs">
+      <DependentUpon>201703221908504_City.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -293,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703221537246_Password.resx">
       <DependentUpon>201703221537246_Password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703221908504_City.resx">
+      <DependentUpon>201703221908504_City.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
