--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -213,6 +213,18 @@
     <Compile Include="Migrations\201703221908504_City.Designer.cs">
       <DependentUpon>201703221908504_City.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703221958461_State.cs" />
+    <Compile Include="Migrations\201703221958461_State.Designer.cs">
+      <DependentUpon>201703221958461_State.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703222008404_ZipCode.cs" />
+    <Compile Include="Migrations\201703222008404_ZipCode.Designer.cs">
+      <DependentUpon>201703222008404_ZipCode.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703222030337_FirstName.cs" />
+    <Compile Include="Migrations\201703222030337_FirstName.Designer.cs">
+      <DependentUpon>201703222030337_FirstName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -300,6 +312,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703221908504_City.resx">
       <DependentUpon>201703221908504_City.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703221958461_State.resx">
+      <DependentUpon>201703221958461_State.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703222008404_ZipCode.resx">
+      <DependentUpon>201703222008404_ZipCode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703222030337_FirstName.resx">
+      <DependentUpon>201703222030337_FirstName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
