Registration form completed

--- a/TrashPickup/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup/TrashPickup.csproj
@@ -225,6 +225,10 @@
     <Compile Include="Migrations\201703222030337_FirstName.Designer.cs">
       <DependentUpon>201703222030337_FirstName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703222036490_LastName.cs" />
+    <Compile Include="Migrations\201703222036490_LastName.Designer.cs">
+      <DependentUpon>201703222036490_LastName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -321,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703222030337_FirstName.resx">
       <DependentUpon>201703222030337_FirstName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703222036490_LastName.resx">
+      <DependentUpon>201703222036490_LastName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
